--- a/Cuisine/Views/Search/Index.cshtml
+++ b/Cuisine/Views/Search/Index.cshtml
@@ -13,6 +13,10 @@
     <script>
         $(document).ready(function () {
             $('.select2').select2();
+
+            $('#btn-chay-submit').click(function () {
+                $('#txt-chay').val('true');
+            });
         });
     </script>
 }
@@ -22,6 +26,7 @@
             <img src="~/Content/Images/cooking-logo.png" width="150" alt="Cooking logo" title="Cooking logo" />
         </div>
         <div class="form-group">
+            <input type="hidden" name="chay" value="false" id="txt-chay"/>
             <select name="keyword" class="form-control select2">
                 @foreach (string key in ViewBag.dsKhuVuc.Keys)
                 {
@@ -31,7 +36,7 @@
         </div>
         <div class="form-group text-center">
             <button type="submit" class="btn btn-primary">&nbsp;&nbsp;&nbsp;Món ăn&nbsp;&nbsp;&nbsp;</button> &nbsp;&nbsp;
-            <button type="button" class="btn btn-default">Món chay</button>
+            <button type="submit" class="btn btn-default" id="btn-chay-submit">Món chay</button>
         </div>
     </form>
 </div>
