Canh đều mô tả món ăn ở màn hình chi tiết

--- a/Cuisine/Views/Search/Detail.cshtml
+++ b/Cuisine/Views/Search/Detail.cshtml
@@ -31,7 +31,7 @@
                 {
                     <span class="loai-mon mon-man">Món mặn</span>
                 }
-                <p style="margin-top:3px">@ViewBag.dish.Desc</p>
+                <p style="margin-top:3px; text-align:justify">@ViewBag.dish.Desc</p>
                 <h3>Công thức món ăn</h3>
                 <table class="table table-hover">
                     <tbody>
