--- a/Cuisine/Views/Shared/_LayoutCuisine.cshtml
+++ b/Cuisine/Views/Shared/_LayoutCuisine.cshtml
@@ -12,7 +12,7 @@
     @RenderBody()
     <footer>
         <div class="container">
-            <p>&copy; @DateTime.Now.Year - Nhóm 3 (THẢO - DƯ - ĐỨC)</p>
+            <p style="text-shadow: 1px 0px 1px #fff">&copy; @DateTime.Now.Year - Nhóm 3 (THẢO - DƯ - ĐỨC)</p>
         </div>
     </footer>
     @Scripts.Render("~/bundles/jquery")
