Fix broken link

--- a/Cuisine/Views/Search/Index.cshtml
+++ b/Cuisine/Views/Search/Index.cshtml
@@ -119,7 +119,7 @@
             <div class="form-group text-center">
                 <button type="submit" class="btn btn-primary">&nbsp;&nbsp;&nbsp;Món ăn&nbsp;&nbsp;&nbsp;</button> &nbsp;&nbsp;
                 <button type="submit" class="btn btn-default" id="btn-chay-submit">Món chay</button> &nbsp;&nbsp;
-                <a href="Material" class="btn btn-success" role="button">Tìm theo nguyên liệu</a>
+                <a href="/Search/Material" class="btn btn-success" role="button">Tìm theo nguyên liệu</a>
             </div>
         </form>
     </div>
