--- a/Cuisine/Views/Search/Material.cshtml
+++ b/Cuisine/Views/Search/Material.cshtml
@@ -118,7 +118,8 @@
             </div>
             <div class="form-group text-center">
                 <button type="submit" class="btn btn-primary">&nbsp;&nbsp;&nbsp;Món ăn&nbsp;&nbsp;&nbsp;</button> &nbsp;&nbsp;
-                <button type="submit" class="btn btn-default" id="btn-chay-submit">Món chay</button>
+                <button type="submit" class="btn btn-default" id="btn-chay-submit">Món chay</button> &nbsp;&nbsp;
+                <a href="." class="btn btn-success" role="button">Tìm theo khu vực</a>
             </div>
         </form>
     </div>
